# django-entra-external-id

./: LICENSE  README.md  build_files.sh  main.py  pyproject.toml  requirements.txt  vercel.json
accounts/: admin.py  forms.py  models.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_first_name_and_more.py  0003_customuser_sub.py
chat/: consumer.py  consumers.py  routing.py  urls.py  views.py
config/: asgi.py  backend.py  settings-local.py  settings.py  urls.py  wsgi.py
sample/: urls.py  views.py
static/css/: base.css
templates/: base.html
templates/chat/: index.html  room.html
templates/sample/: home.html
