[project]
name = "django-entra-external-id"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "django-debug-toolbar>=6.0.0",
    "mozilla-django-oidc>=4.0.1",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "whitenoise>=6.9.0",
]
